# mercurio-adapter

./: Cargo.toml
crates/mercurio-python/: Cargo.toml  pyproject.toml
crates/mercurio-python/src/: lib.rs
crates/mercurio-view-model/: Cargo.toml
crates/mercurio-view-model/src/: lib.rs
crates/mercurio-wasm/: Cargo.toml  README.md
crates/mercurio-wasm/src/: lib.rs
python/: AGENTS.md  README.md  pyproject.toml
python/mercurio/: __init__.py  _core.pyi  authoring.py  backend.py  client.py  models.py  process.py  project.py  runtime.py  workspace.py
python/mercurio_capability/: __init__.py  runner.py  types.py
python/tests/: test_capability_runner.py  test_client.py  test_integration_backend.py
