[package]
name = "mercurio-view-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
